--- a/src/components/Alert/style.scss
+++ b/src/components/Alert/style.scss
@@ -19,6 +19,7 @@
       border-radius: 10px;
     img {
       width: 100%;
+      max-height: 400px;
       vertical-align: middle;
       border-radius: 10px 10px 0 0;
     }
